<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ccp"
            android:icon="@drawable/ic_menu_ccp"
            android:title="@string/menu_ccp" />
        <item
            android:id="@+id/nav_ads"
            android:icon="@drawable/ic_menu_ads"
            android:title="@string/menu_ads" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_menu_about_us"
            android:title="@string/menu_about_us" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_contact"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
    </group>
</menu>